--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,40 @@
 }
 
 .titleHeading {
-  color: blue;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
 }
 
 .container-login {
-  color: antiquewhite;
+  margin: 0 auto;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  padding: 6.5em 0 12.3em 0;
+}
+
+input {
+  display: block;
+}
+
+.form-input {
+  width: 280px;
+  padding: 0.3em;
+  padding: 0.5rem 2rem;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  margin-bottom: 1rem;
+}
+
+.form-btn {
+  display: block;
+  width: 280px;
+  padding: 0.3em;
+  padding: 0.5rem 2rem;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  margin-bottom: 1rem;
 }
